--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav ul {
     #abouttxt-container {
         width: 100%;
         text-align: center;
-        margin-top: 150%;
+        margin-top: 170%;
         padding-bottom: 70px;
     }
 
@@ -123,7 +123,7 @@ nav ul {
     }
 
     .slideshow-container {
-        width: 400px;
+        width: 100%;
         height: 200px;
         position: relative;
         margin: 12em auto;
