--- a/style.css
+++ b/style.css
@@ -387,6 +387,7 @@ nav ul {
         height: 395px;
         position: relative;
         margin: 10em auto;
+        pointer-events: none;
     }
 
     .mySlides {
